replace test Node Function with one in Python

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,9 @@ name: Lilaobot main workflow
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - master
+      - dev/**
 
 jobs:
   deploy:
