--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,3 +1,6 @@
+aiohttp==3.7.4.post0
+async-timeout==3.0.1
+attrs==21.2.0
 cachetools==4.2.2
 certifi==2021.5.30
 chardet==4.0.0
@@ -9,6 +12,7 @@ grpc-google-iam-v1==0.12.3
 grpcio==1.38.1
 idna==2.10
 libcst==0.3.19
+multidict==5.1.0
 mypy-extensions==0.4.3
 packaging==20.9
 proto-plus==1.18.1
@@ -25,3 +29,4 @@ slack-sdk==3.7.0
 typing-extensions==3.10.0.0
 typing-inspect==0.7.1
 urllib3==1.26.6
+yarl==1.6.3
