fix: pull-request-plan had invalid conf

--- a/.github/workflows/pull-request-plan.yml
+++ b/.github/workflows/pull-request-plan.yml
@@ -17,4 +17,4 @@ jobs:
       - name: terraform plan
         uses: dflook/terraform-plan@v1
         with:
-          path: my-terraform-config
+          path: terraform
