fix(ci): gcloud was not setup..

--- a/.github/workflows/pull-request-plan.yml
+++ b/.github/workflows/pull-request-plan.yml
@@ -13,6 +13,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Setup gcloud CLI
+        uses: google-github-actions/setup-gcloud@master
+        with:
+          version: '290.0.1'
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          project_id: ${{ secrets.GCP_PROJECT }}
+          export_default_credentials: true
+
       - name: terraform plan
         uses: dflook/terraform-plan@v1
         with:
