fix(function): handle project oauth secret

--- a/functions/gmail-notifier/config.json
+++ b/functions/gmail-notifier/config.json
@@ -1,4 +1,5 @@
 {
   "GCF_REGION": "europe-west1",
-  "TOPIC_ID": "calls_for_offer"
+  "TOPIC_ID": "calls_for_offer",
+  "GCLOUD_PROJECT": "lilaobot"
 }
