fix(function): trying to get oauthid

--- a/functions/gmail-notifier/package.json
+++ b/functions/gmail-notifier/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@google-cloud/datastore": "^6.4.4",
     "@google-cloud/debug-agent": "^5.2.5",
+    "@google-cloud/secret-manager": "^3.9.0",
     "cheerio": "^1.0.0-rc.10",
     "googleapis": "^80.0.0",
     "nconf": "^0.11.3"
