--- a/functions/gmail-notifier/package.json
+++ b/functions/gmail-notifier/package.json
@@ -23,13 +23,15 @@
     "cheerio": "^1.0.0-rc.10",
     "googleapis": "^80.0.0",
     "nconf": "^0.11.3",
+    "proxyquire": "^2.1.3",
     "sinon": "^11.1.2"
   },
   "devDependencies": {
     "mocha": "^8.4.0",
-    "semistandard": "^16.0.1"
+    "prettier": "2.4.1",
+    "standard": "^16.0.3"
   },
-  "semistandard": {
+  "standard": {
     "env": [
       "mocha"
     ]
