--- a/functions/gmail-notifier/renovate.json
+++ b/functions/gmail-notifier/renovate.json
@@ -1,8 +1,5 @@
 {
-  "extends": [
-    "config:base",
-    "docker:disable"
-  ],
+  "extends": ["config:base", "docker:disable"],
   "pinVersions": false,
   "rebaseStalePrs": true
 }
