--- a/functions/gmail-notifier/package.json
+++ b/functions/gmail-notifier/package.json
@@ -20,11 +20,13 @@
     "@google-cloud/datastore": "^6.4.4",
     "@google-cloud/debug-agent": "^5.2.5",
     "@google-cloud/secret-manager": "^3.9.0",
+    "@slack/web-api": "^6.4.0",
     "cheerio": "^1.0.0-rc.10",
     "googleapis": "^80.0.0",
     "nconf": "^0.11.3",
     "proxyquire": "^2.1.3",
-    "sinon": "^11.1.2"
+    "sinon": "^11.1.2",
+    "slackbots": "^1.2.0"
   },
   "devDependencies": {
     "eslint": "^7.13.0",
